--- a/components/basic/ImageModal/styles.less
+++ b/components/basic/ImageModal/styles.less
@@ -1,19 +1,8 @@
 .wl-imagemodal-wrapper {
-    .wl-imagemodal-show .ant-modal-close {
-        opacity: 0;
-        backgroundColor: 'rgba(255,255,255,0)';
-        borderRadius: 2;
-        paddingBottom: 0;
-        
-        .wl-imagemodal-divImg {
-            borderRadius: 2   
-        }
+    display: inline-block;
+    .wl-imagemodal-con {
+        display: inline-block;
+        cursor: pointer;
+        color: #ff2b4d;
     }
-
-    .wl-imagemodal-btnOperate {
-        lineHeight: 20px;
-        fontSize: 1.4rem;
-        backgroundImage: linear-gradient(to bottom,#fff 0,#e0e0e0 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe0e0e0', GradientType=0) ;
-    } 
 }
