--- a/components/basic/Select/styles.less
+++ b/components/basic/Select/styles.less
@@ -453,7 +453,7 @@
   margin: 0;
   padding: 0;
 }
-.wl-select-dropdown-menu-item-group-list > .wl-select-dropdown-menu-item {
+.wl-select-dropdown-menu-item-group-list .wl-select-dropdown-menu-item {
   padding-left: 24px;
 }
 .wl-select-dropdown {
