--- a/demo/client/view/index.html
+++ b/demo/client/view/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="main-container"></div>
+    <script src="../static/js/data.js"></script>
     <script src="/resource/index.bundle.js"></script>
 </body>
 </html>
